# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "dashboard"
version = "0.1.0"
edition = "2018"

[dependencies]
pulldown-cmark = { version = "0.8.0", default-features = false }
tera = { version = "1.12.1", default-features = false }
serde = {version = "1.0.126", features = ["derive"] }
walkdir = "2.3.2"
